force-app/main/default/objects/Artist_Statement_Line_Item__c/Artist_Statement_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Artist Statement Line Item</label>
    <nameField>
        <label>Artist Statement Income Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>