force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Artist_Profit__c.field-meta.xml
<CustomField>
    <fullName>Artist_Profit__c</fullName>
    <formula>Performance_Fee__c -  Expenses__c -  Vocal_Events_Commission__c -  Record_Company_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Performance Less Expenses and Commissions</inlineHelpText>
    <label>Artist Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>