force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Artist_Statement__c.field-meta.xml
<CustomField>
    <fullName>Artist_Statement__c</fullName>
    <label>Artist Statement</label>
    <referenceTo>Artist_Statement__c</referenceTo>
    <relationshipName>Artist_Statement_Income_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>