force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Commission_Before_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Commission_Before_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This indicates that commission is charged on the full Performane fee</inlineHelpText>
    <label>Commission Before Expenses</label>
    <type>Checkbox</type>
</CustomField>