force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Description_of_Artist_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Artist_Expenses__c</fullName>
    <label>Description of Artist Expenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>