force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Expenses_Paid_by_VE__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Paid_by_VE__c</fullName>
    <inlineHelpText>The total value of Expenses Paid by Vocal Events</inlineHelpText>
    <label>Expenses Paid by VE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>