force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Includes_VAT__c.field-meta.xml
<CustomField>
    <fullName>Includes_VAT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This line is checked if the original booking form is VAT Applicable</description>
    <label>Includes VAT</label>
    <type>Checkbox</type>
</CustomField>