force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Income_Received__c.field-meta.xml
<CustomField>
    <fullName>Income_Received__c</fullName>
    <formula>Performance_Fee_Less_Expenses__c 
	+  Expenses__c 
	+  Travel_Fee__c 
	+  Technical_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>