force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Payable_to_Artist__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Artist__c</fullName>
    <formula>Performance_Fee__c 
	+  IF(NOT(Artist_Statement__r.Artist__r.Name  = &apos;Jakkals Vibes Performer&apos;),Expenses__c,0)
	+  Travel_Fee__c 
	+  Technical_Fee__c 
	-  Vocal_Events_Commission__c 
	-  Expenses_Paid_by_VE__c 
	-  Record_Company_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable to Artist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>