force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Performance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee__c</fullName>
    <label>Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>