force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Performance_Fee_Less_Commission__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee_Less_Commission__c</fullName>
    <formula>Performance_Fee__c 
	-  Vocal_Events_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Performance Fee minus Vocal Events Commission</inlineHelpText>
    <label>Performance Fee Less Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>