force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Performance_Fee_Less_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee_Less_Expenses__c</fullName>
    <formula>Performance_Fee__c - Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Fee Less Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>