force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Performance_fee_Plus_Travel__c.field-meta.xml
<CustomField>
    <fullName>Performance_fee_Plus_Travel__c</fullName>
    <description>The Total Performance Fee plus Travel</description>
    <formula>Performance_Fee__c + Travel_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance fee Plus Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>