force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Record_Company_Commission__c.field-meta.xml
<CustomField>
    <fullName>Record_Company_Commission__c</fullName>
    <formula>Performance_Fee_Less_Expenses__c * Record_Company_Commission_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Company Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>