force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Record_Company_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Record_Company_Commission_Percentage__c</fullName>
    <description>Because lookup fields can&apos;t be used in Roll Up Summaries, this field holds the record company commission value for the Artist</description>
    <label>Record Company Commission [Percentage]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>