force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <formula>Performance_Fee_Less_Expenses__c
	+  Technical_Fee__c 
	+  Travel_Fee__c 
	+  Expenses__c 
	- Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>