force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Total_Owed_to_VE__c.field-meta.xml
<CustomField>
    <fullName>Total_Owed_to_VE__c</fullName>
    <formula>Expenses_Paid_by_VE__c  
	+  Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commission + Any Expenses paid by Vocal Evants</inlineHelpText>
    <label>Total Owed to VE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>