force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount__c</fullName>
    <description>The Amount of VAT Charged for the Line Item</description>
    <formula>IF(Includes_VAT__c, ((Performance_Fee__c + Travel_Fee__c)*  $Setup.VocalEventsSettings__c.VAT__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>