force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Vocal_Events_Commission__c.field-meta.xml
<CustomField>
    <fullName>Vocal_Events_Commission__c</fullName>
    <formula>IF( Commission_Before_Expenses__c ,
			 Performance_Fee__c * Vocal_Events_Commission_Percent__c,
Performance_Fee_Less_Expenses__c   *  Vocal_Events_Commission_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vocal Events Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>