force-app/main/default/objects/Artist_Statement_Line_Item__c/fields/Vocal_Events_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Vocal_Events_Commission_Percent__c</fullName>
    <description>The percentage of commission payable to Vocal Events. This is determined by the Artist record and populated with flow. Not done as Lookup of Formula as it is used in Roll Up Summaries</description>
    <label>Vocal Events Commission (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>